# chatagent-root

./: .gitignore  Makefile  README.md  hr-chatagent.yaml
.agent/artifacts/: mcp-tool-configuration-implementation-plan.md
.agent/rules/: project_rules.md
.agent/specs/: mcp-tool-configuration-spec.md
.agent/workflows/: config-rollout.md  feature-implementation.md  pre-merge-checklist.md
.cursor/rules/: python.mdc
.github/workflows/: agentsplayground-docker-publish.yml  agentsplayground-release.yml  chatagent-docker-publish.yml  chatagent-release.yml  customer-mcp-docker-publish.yml  customer-mcp-publish.yaml  customer-mcp-release.yml  helm-publish.yaml  helm-release.yaml  m365agentsplayground-docker-publish.yml  m365agentsplayground-release.yml  mcp-docker-publish.yml  mcp-release.yml
a2a-container/: app.py  pyproject.toml
a2a-container/mya2a/: __init__.py  agent.py  agent_executor.py  cli.py  utils.py
a2a-container/mya2a/config/: __init__.py  currency.py  genai.py
a2a-container/mya2a/hams/: __init__.py  config.py
a2a-container/tests/test_data/: config.yaml
a2a-container/tests/test_data/secrets/currency/genai/: api_key
charts/: chatagent-values.yaml  customer-mcp-values.yaml  m365agentsplayground-values.yaml
charts/chatagent/: Chart.yaml  values.yaml
charts/chatagent/configs/: config.yaml
charts/chatagent/templates/: _helpers.yaml  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  job-schema.yaml  requestauthorization.yaml  service.yaml  serviceaccount.yaml
charts/customer-mcp/: Chart.yaml  values.yaml
charts/customer-mcp/configs/: config.yaml
charts/customer-mcp/templates/: _helpers.yaml  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  job-schema.yaml  (+3 more)
charts/m365agentsplayground/: Chart.yaml  values.yaml
chatagent-container/: Dockerfile  README.md  app.py  pyproject.toml
chatagent-container/chatbot/: __init__.py  chathistory.py  cli.py
chatagent-container/chatbot/azurebot/: __init__.py
chatagent-container/chatbot/config/: __init__.py  tool.py
chatagent-container/chatbot/hams/: __init__.py  config.py
chatagent-container/chatbot/langgraph/: __init__.py  agentstate.py  handler.py  toolregistry.py
chatagent-container/chatbot/mcp_client/: __init__.py
chatagent-container/chatbot/service/: __init__.py  state.py  webview.py
chatagent-container/docs/: MIGRATION_GUIDE.md
chatagent-container/tests/: conftest.py  test_handmade.py  test_live_server.py  test_llm.py  test_tool_configuration.py  test_webview.py
chatagent-container/tests/test_data/: config.yaml
chatagent-container/tests/test_data/secrets_sample/aiclient/: azure_api_key
chatagent-container/tests/test_data/secrets_sample/bot/azure_bot_client/: CLIENTID  TENANTID
chatbot-container/: README.md  pyproject.toml
chatbot-container/.deepeval/: .deepeval_telemetry.txt
chatbot-container/chatbot/: __init__.py  keys.py
chatbot-container/tests/: test_live_server.py  test_llm.py
customer-mcp-container/: .flake8  dev.py  pyproject.toml
customer-mcp-container/customer/: __init__.py  cli.py  config.py
customer-mcp-container/tests/: conftest.py  test_mcp.py
fluxcd-dev/: app-chatagent.yaml  app-m365agentsplayground.yaml  customer-mcp.yaml  db-chatbot.yaml  virtualservice.yaml
fluxcd-dev-old/: app-mcp.yaml
m365agentsplayground-container/: Dockerfile
mcp-container/: Dockerfile  pyproject.toml
mcp-container/customer/: __init__.py  cli.py  config.py  keys.py
mcp-container/customer/config/: __init__.py
mcp-container/customer/hams/: __init__.py
mcp-container/customer/hams_old/: __init__.py  config.py
mcp-container/customer/llmconversationhandler/: __init__.py  toolregistry.py
mcp-container/customer/mcp_server/: __init__.py
mcp-container/customer/mcp_serverold/: __init__.py
mcp-container/customer/mcp_serverold/tools/: __init__.py
mcp-container/customer/tools/: __init__.py
mcp-container/customer/tools/mcp/: __init__.py
mcp-container/tests/: conftest.py  test_mcp.py
mcp-container/tests/test_data/: config.yaml
mcp-container/tests/tools/: test_calcs.py
(+21 files in other folders)
